test/files/neg/typevar_derive_alias.check
typevar_derive_alias.scala:14: error: missing parameter type
  def toSetMap2(ts: Sq[El]): St[El] = ts.toSt.map(x => x) // B occurs contravariantly, so we maximize
                                                  ^
typevar_derive_alias.scala:17: error: missing parameter type
  def toSetMap3(ts: Sq[Alias]): St[Alias] = ts.toSt.map(x => x)
                                                        ^
2 errors
